fix(a11y): improve colour contrast

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $pink: #de5a7f;
 $teal: #00857c;
-$blue: #0099b4;
+$blue: #008299;
 $red: #fd3300;
 
 $lightBg: #ffffff;
